<resources>
    <string name="app_name">AndroidIntermadeDicoding</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="registrasi">Registrasi</string>
    <string name="silahkan_anda_registrasi">Silahkan Anda Registrasi</string>
    <string name="login">Login</string>
    <string name="not_member">Bukan seorang anggota ? \t</string>
    <string name="please_register">Silahkan Daftar</string>
    <string name="add">Add Story</string>
    <string name="lo_gout">Logout</string>
    <string name="mountain_views">Mountain Views</string>
    <string name="galery">Galery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="map_key">AIzaSyBPkS3lApqsJ2qKaXBDOSllzWKY-KrIe0Q</string>
    <string name="map">Map</string>
    <string name="time_out">Time Out</string>
    <string name="coba_lagi">Coba Lagi</string>


</resources>