<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.AuthenticationActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/primaryBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_video_camera"
        app:layout_constraintBottom_toTopOf="@+id/textWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selamat_datang"
        android:textColor="@color/primaryBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />


    <com.example.androidintermadedicoding.ui.widget.InputEmail
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <com.example.androidintermadedicoding.ui.widget.InputPassword
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <com.example.androidintermadite.ui.widget.PrimaryButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textNotMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_member"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_register"
        android:textColor="@color/youngBlue"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textNotMember" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnLogin,inputEmail, inputPassword, textWelcome, textNotMember,textRegister,imageLogo" />


</androidx.constraintlayout.widget.ConstraintLayout>