<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.RegisterActivity">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/primaryBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/silahkan_anda_registrasi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primaryBlack"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/inputName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="16dp"
        android:hint="@string/masukkan_nama_anda"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <com.example.androidintermadedicoding.ui.widget.InputEmail
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <com.example.androidintermadedicoding.ui.widget.InputPassword
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnRegis"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <com.example.androidintermadedicoding.ui.widget.PrimaryButton
        android:id="@+id/btnRegis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrasi"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grupRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btnRegis,inputEmail, inputName, inputPassword, textWelcome"/>
</androidx.constraintlayout.widget.ConstraintLayout>